{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Player",
            "id": "ec5cc72c-31f6-423e-80be-6acae711ed66",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "554b1de5-051c-484e-9f10-51832b56341f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "JumpCancel",
                    "type": "Button",
                    "id": "c531ac21-490d-41a0-bd58-b211fb876ab9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "a77c817f-6280-42de-a9d5-18bc7148a5d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RunKickOff",
                    "type": "Button",
                    "id": "1357f26e-d977-4830-880d-ea80666c9be9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap"
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "1db7a0d3-b1c5-4f2b-ab5d-898f7894a44a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap"
                },
                {
                    "name": "Permeation",
                    "type": "Button",
                    "id": "cf7f6aa5-fd5c-4b22-9349-2a0a8f3eeefa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1e66adf2-18a4-4869-9cde-f115c6f4464e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "6f7f8b6a-3c0f-4869-a038-42867b470153",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8071039c-c81c-4f35-af32-4c4d37b3aa7d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "63242d00-7f33-45f7-9c2f-ddf8e5fc0427",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "f21459a0-8793-4ba9-ac53-272990abcc1c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunKickOff",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "05d885ba-feb9-44d2-aca5-9df9b8c891a7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunKickOff",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c3e04b46-b374-4b4c-b371-d59b877f8143",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunKickOff",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "836f345a-c5a9-4e2b-a925-00da4cc860ea",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Standard",
                    "action": "JumpCancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3093db90-358f-4c8e-9b05-36ba80c134f2",
                    "path": "<Keyboard>/enter",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Standard",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01253765-08f0-45b5-89eb-169d75844e78",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standard",
                    "action": "Permeation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Standard",
            "bindingGroup": "Standard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}